fixed overlap issue by rendering classes to component post state change

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -5,7 +5,7 @@
 
 .flash {
     z-index: 1;
-    position: absolute;
+    position: absolute !important;
 }
 
 .app {
